p2/confs/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  app1
  type: ClusterIP
