p2/confs/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  app2
  type: ClusterIP
