p2/confs/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: app3
  type: ClusterIP
